fix overflow for large boards

--- a/src/styles/zpy/zpy.scss
+++ b/src/styles/zpy/zpy.scss
@@ -15,6 +15,7 @@ body {
 
 .board {
   @include flex.column;
+  width: fit-content;
 }
 
 ///////////////////////////////////////////////////////////////////////////////
